--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
 
     <h1>$ Ethereum Miner $️</h1>
 
+    <!-- Ad Banner -->
+    <ins class="adsbygoogle"
+         style="display:block; text-align:center; margin: 20px 0;"
+         data-ad-client="ca-pub-2671269885552385"
+         data-ad-slot="2384669632"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     <div id="wallet-info">
       <button id="connect-btn">Connect Wallet 🦊</button>
       <p id="wallet-address"></p>
