--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>$ Ethereum Miner $</title>
+
+  <!-- Google AdSense Script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2671269885552385"
+     crossorigin="anonymous"></script>
+
   <style>
     body {
       font-family: 'Arial', sans-serif;
@@ -120,16 +125,8 @@
 
     <h1>$ Ethereum Miner $️</h1>
 
-    <!-- Ad Banner -->
-    <ins class="adsbygoogle"
-         style="display:block; text-align:center; margin: 20px 0;"
-         data-ad-client="ca-pub-2671269885552385"
-         data-ad-slot="2384669632"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <!-- Automatically Displaying Ads (AdSense Auto Ads) -->
+    <ins class="adsbygoogle" style="display:block; text-align:center; margin: 20px 0;"></ins>
 
     <div id="wallet-info">
       <button id="connect-btn">Connect Wallet 🦊</button>
