--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
 </head>
 <body>
   <div class="container">
+
+    <!-- Display Banner Ad at the top -->
+    <ins class="adsbygoogle"
+         style="display:block; margin: 20px auto; max-width: 100%;"
+         data-ad-client="ca-pub-2671269885552385"
+         data-ad-slot="2128127397"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     <!-- Rotating Coin -->
     <div class="coin">
       <div class="coin-face">
@@ -123,16 +135,6 @@
     </div>
 
     <h1>$ Ethereum Miner $️</h1>
-
-    <!-- Multiplex Ads (styled with spacing to prevent overlap) -->
-    <ins class="adsbygoogle"
-         style="display:block; margin: 20px auto; max-width: 100%;"
-         data-ad-format="autorelaxed"
-         data-ad-client="ca-pub-2671269885552385"
-         data-ad-slot="7771929217"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
 
     <div id="wallet-info">
       <button id="connect-btn">Connect Wallet 🦊</button>
@@ -153,6 +155,17 @@
       <button id="start-mining-btn" disabled>Start Mining ⛏️</button>
       <button id="stop-mining-btn" style="display: none;">Stop Mining ⛔</button>
     </div>
+
+    <!-- Multiplex Ads BELOW the mining section -->
+    <ins class="adsbygoogle"
+         style="display:block; margin: 30px auto; max-width: 100%;"
+         data-ad-format="autorelaxed"
+         data-ad-client="ca-pub-2671269885552385"
+         data-ad-slot="7771929217"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
